// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a stop card 1`] = `
<div
  className="m-tnm-sidebar__route"
>
  <a
    className="h3 m-tnm-sidebar__route-name u-bg--bus"
    href="/schedules/504"
  >
    <span
      className="bus-route-sign"
    >
      504
    </span>
    <span
      className="m-tnm-sidebar__route-alert"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
  </a>
  <div
    className="m-tnm-sidebar__stop"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="m-tnm-sidebar__stop-info"
    >
      <a
        className="m-tnm-sidebar__stop-name"
        href="/stops/9983"
      >
        Stuart St @ Charles St S
        <span
          className="m-tnm-sidebar__stop-accessible"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </a>
      <div
        className="m-tnm-sidebar__stop-distance"
      >
        238 ft
      </div>
    </div>
    <div>
      <div
        className="m-tnm-sidebar__direction"
      >
        <div
          className="m-tnm-sidebar__direction-name u-small-caps"
        >
          Outbound
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule m-tnm-sidebar__headsign-schedule--condensed"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
          >
            Watertown
          </div>
          <div
            className="m-tnm-sidebar__via"
          >
            via Copley (Express)
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                14
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                44
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-tnm-sidebar__stop"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="m-tnm-sidebar__stop-info"
    >
      <a
        className="m-tnm-sidebar__stop-name"
        href="/stops/6542"
      >
        Kneeland St @ Washington St
        <span
          className="m-tnm-sidebar__stop-accessible"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </a>
      <div
        className="m-tnm-sidebar__stop-distance"
      >
        0.2 mi
      </div>
    </div>
    <div>
      <div
        className="m-tnm-sidebar__direction"
      >
        <div
          className="m-tnm-sidebar__direction-name u-small-caps"
        >
          Inbound
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule m-tnm-sidebar__headsign-schedule--condensed"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
          >
            Downtown
          </div>
          <div
            className="m-tnm-sidebar__via"
          >
            via Copley (Express)
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                1
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                14
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders a stop card for the silver line 1`] = `
<div
  className="m-tnm-sidebar__route"
>
  <a
    className="h3 m-tnm-sidebar__route-name u-bg--silver-line"
    href="/schedules/751"
  >
    <span
      className=""
    >
      SL4
    </span>
  </a>
  <div
    className="m-tnm-sidebar__stop"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="m-tnm-sidebar__stop-info"
    >
      <a
        className="m-tnm-sidebar__stop-name"
        href="/stops/place-tumnl"
      >
        <span
          className="m-tnm-sidebar__stop-marker"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        Tufts Medical Center
        <span
          className="m-tnm-sidebar__stop-accessible"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </a>
      <div
        className="m-tnm-sidebar__stop-distance"
      >
        0.1 mi
      </div>
    </div>
    <div>
      <div
        className="m-tnm-sidebar__direction"
      >
        <div
          className="m-tnm-sidebar__direction-name u-small-caps"
        >
          Outbound
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule m-tnm-sidebar__headsign-schedule--condensed"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
          >
            Dudley
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                4
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                16
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="m-tnm-sidebar__direction"
      >
        <div
          className="m-tnm-sidebar__direction-name u-small-caps"
        >
          Inbound
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule m-tnm-sidebar__headsign-schedule--condensed"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
          >
            South Station
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                1
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                4
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-tnm-sidebar__stop"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="m-tnm-sidebar__stop-info"
    >
      <a
        className="m-tnm-sidebar__stop-name"
        href="/stops/6537"
      >
        Washington St @ Essex St
        <span
          className="m-tnm-sidebar__stop-accessible"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </a>
      <div
        className="m-tnm-sidebar__stop-distance"
      >
        0.2 mi
      </div>
    </div>
    <div>
      <div
        className="m-tnm-sidebar__direction"
      >
        <div
          className="m-tnm-sidebar__direction-name u-small-caps"
        >
          Inbound
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule m-tnm-sidebar__headsign-schedule--condensed"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
          >
            South Station
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                1
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                4
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`returns null if route has no schedules 1`] = `null`;
